--- a/templates/book.html
+++ b/templates/book.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %} {% block head %}
-<title>Book | Flight</title>
+<title>Book Flight</title>
 <link rel="stylesheet" href="../static/css/book_style.css" />
 <script type="text/javascript" src="../static/js/book.js"></script>
 {% endblock %} {% block body %}
