--- a/templates/bookings.html
+++ b/templates/bookings.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %} {% block head %}
-<title>Bookings | Flight</title>
+<title>Flight Bookings</title>
 <script type="text/javascript" src="../static/js/bookings.js"></script>
 <link rel="stylesheet" href="../static/css/bookings_style.css" />
 {% endblock head %} {% block body %}
