--- a/templates/flight_base.html
+++ b/templates/flight_base.html
@@ -15,94 +15,16 @@
   <link rel="stylesheet" href="/static/css/flight.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+
+  <link rel="icon" type="image/ico" href="../static/img/favicon.ico" />
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
+  <title>Recommend</title>
 </head>
 
 <body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-  <!-- <div id="search-form">
-      <div id="header">
-        <h1>SEARCH FOR CHEAP FLIGHTS</h1>
-      </div>
-      <section>
-        <div class="flight" id="flightbox">
-          
-          <form id="flight-form" action="/flight/search" method="GET">
-          
-          <div id="flight-type">
-            <div class="info-box">
-              <input type="radio" name="TripType" value=2 id="return" checked />
-              <label for="return">ROUND TRIP</label>
-            </div>
-            <div class="info-box">
-              <input type="radio" name="TripType" value=1 id="one-way" />
-              <label for="one-way">ONE WAY</label>
-            </div>
-          </div>
-          
-          
-          <div id="flight-depart">
-            <div class="info-box">
-              <label for="">LEAVING FROM</label>
-              <input type="text" id="dep-from" name="Origin"/>
-              <div id="depart-res">
-                <ul id="origin_list"></ul>
-              </div>
-            </div>
-            <div class="info-box" id="arrive-box">
-              <label for="">ARRIVING AT</label>
-              <input type="text" id="dep-to" name="Destination"/>
-              <div id="arrive-res">
-                <ul id="destination_list"></ul>
-              </div>
-            </div>
-          </div>
-          
-          
-          <div id="flight-dates">
-            <div class="info-box">
-              <label for="">LEAVING ON</label>
-              <input type="text" id="leave-date" name="DepartDate" readonly />
-            </div>
-            <div class="info-box" id="return-box">
-              <label for="">RETURNING ON</label>
-              <input type="text" id="return-date" name="ReturnDate" readonly />
-            </div>
-          </div>
-          
-            <div class="info-box">
-              <label for="class-type">CLASS</label>
-              <select name="SeatClass" id="class-type">
-                <option value="economy">ECONOMY</option>
-                <option value="business">BUSINESS</option>
-                <option value="first">FIRST</option>
-              </select>
-            </div>
-        </div>
-        
-          
-        <div id="flight-search">
-          <div class="info-box">
-            <input type="submit" id="search-flight" value="SEARCH FLIGHTS"/>
-          </div>
-        </div>
-          
-        </form> 
-        </div>
-      </section>
-    
-      <div id="calender">
-        <div class="nav">
-          <button id="prev"><</button>
-          <p><span id="month"></span>
-            <span id="year"></span></p>
-          <button id="next">></button>
-        </div>
-        <table id="cal"></table>
-        </div>
-        
-  </div> -->
+  
 
   <div class="wrapper bg-white border rounded" id="form-container">
     {% block content %}
@@ -154,377 +76,7 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
 
-  <script type="text/javascript">
-    let request_origin = null;
-    let request_dest = null;
-    function handleResponseOrigin(response) {
-      let inner = "";
-      response = response["data"];
-      console.log(response);
-      if (response.length !== 0 && $("#dep-from").val() !== "") {
-        removeElementsOrigin();
-        for (let airportInfo of response) {
-          let listItem = document.createElement("li");
-          listItem.classList.add("list-items-origin", "list-group-item", "rounded-0");
-          curString = airportInfo.toString();
-          listItem.setAttribute(
-            "onclick",
-            "displayOrigin('" + airportInfo[0] + "')"
-          );
-
-          listItem.innerHTML = curString;
-          document.querySelector("#origin_list").appendChild(listItem);
-        }
-      }
-    }
-
-    function handleResponseDest(response) {
-      let inner = "";
-      response = response["data"];
-      console.log(response);
-      if (response.length !== 0 && $("#dep-to").val() !== "") {
-        removeElementsDest();
-        for (let airportInfo of response) {
-          let listItem = document.createElement("li");
-          listItem.classList.add("list-items-dest", "list-group-item", "rounded-0");
-          curString = airportInfo.toString();
-          listItem.setAttribute(
-            "onclick",
-            "displayDest('" + airportInfo[0] + "', '" + airportInfo[2] + "')"
-          );
-
-          listItem.innerHTML = curString;
-          document.querySelector("#destination_list").appendChild(listItem);
-        }
-      }
-    }
-
-    function displayOrigin(value) {
-      console.log(value);
-      $("#dep-from").val(value);
-      removeElementsOrigin();
-    }
-
-    function displayDest(value, country) {
-      console.log(value);
-      $("#dep-to").val(value);
-      $("#dest-country").val(country);
-      removeElementsDest();
-    }
-
-    function removeElementsOrigin() {
-      let items = document.querySelectorAll(".list-items-origin");
-      // console.log(items);
-      items.forEach((item) => {
-        console.log(item);
-        item.remove();
-      });
-    }
-
-    function removeElementsDest() {
-      let items = document.querySelectorAll(".list-items-dest");
-      // console.log(items);
-      items.forEach((item) => {
-        console.log(item);
-        item.remove();
-      });
-    }
-
-    function getOrigin() {
-      let city = $("#dep-from").val();
-      // console.log(city);
-      if (!city) {
-        // console.log("string is empty");
-        removeElementsOrigin();
-        return;
-      }
-      city = encodeURIComponent(city);
-      let url = "/flight/select_place/" + city;
-      if (request_origin != null) {
-        request_origin.abort();
-      }
-      request_origin = $.ajax({
-        type: "GET",
-        url: url,
-        success: handleResponseOrigin,
-      });
-    }
-
-    function getDest() {
-      let city = $("#dep-to").val();
-      console.log(city);
-      if (!city) {
-        removeElementsDest();
-        // console.log("string is empty");
-        return;
-      }
-      city = encodeURIComponent(city);
-      let url = "/flight/select_place/" + city;
-      if (request_dest != null) {
-        request_dest.abort();
-      }
-      request_dest = $.ajax({
-        type: "GET",
-        url: url,
-        success: handleResponseDest,
-      });
-    }
-
-    function setup() {
-      $("#dep-from").on("input", getOrigin);
-      $("#dep-to").on("input", getDest);
-      $("#one-way").on("click", () => toggleReturnBox("one-way"));
-      $("#return").on("click", () => toggleReturnBox("return"));
-    }
-
-
-    $("document").ready(setup);
-
-    function toggleReturnBox(btn) {
-      let box1 = $("#return-box");
-      console.log(box1);
-      console.log(btn);
-      // console.log("button checked", this.checked);
-      if (btn == "return") {
-        box1.css("visibility", "visible");
-      }
-      if (btn == "one-way") {
-        box1.css("visibility", "hidden");
-      }
-    }
-      // let months = [
-      //   "January",
-      //   "February",
-      //   "March",
-      //   "April",
-      //   "May",
-      //   "June",
-      //   "July",
-      //   "August",
-      //   "September",
-      //   "October",
-      //   "November",
-      //   "December",
-      // ];
-
-      // let dateObj = new Date();
-      // let month = dateObj.getMonth();
-      // let currMonth = dateObj.getMonth();
-      // let year = dateObj.getFullYear();
-      // let currYear = dateObj.getFullYear();
-      // let tDate = dateObj;
-      // let stayOpen = false;
-      // let pickedDate = "";
-      // let table = _("cal");
-      // let cal = _("calender");
-      // let xhr = new XMLHttpRequest();
-      // let fromTo = "from";
-
-      // _("month").innerHTML = months[month];
-      // _("year").innerHTML = year;
-      // _("prev").addEventListener("click", () => trackMonth("prev"));
-      // _("next").addEventListener("click", () => trackMonth("next"));
-      // // _('dep-from').addEventListener('keyup', searchCities);
-      // // _('dep-to').addEventListener('keyup', searchCities);
-      // _("dep-from").addEventListener("focus", () => whichCityBox("from"));
-      // _("dep-to").addEventListener("focus", () => whichCityBox("to"));
-      // _("one-way").addEventListener("click", () => toggleReturnBox("one-way"));
-      // _("return").addEventListener("click", () => toggleReturnBox("return"));
-      // // _('flight-form').addEventListener('submit', onSubmit);
-
-      // _("leave-date").addEventListener("focus", showCalender);
-      // _("leave-date").addEventListener("blur", hideCalender);
-      // _("return-date").addEventListener("focus", showCalender);
-      // _("return-date").addEventListener("blur", hideCalender);
-
-      // function _(id) {
-      //   return document.getElementById(id);
-      // }
-
-      // function addZero(d) {
-      //   if (d < 10) return "0" + d;
-      //   return d;
-      // }
-
-      // function convertDate(d) {
-      //   var ts = new Date(d).toString();
-      //   ts = ts.substr(0, 15);
-      //   console.log(ts);
-      //   return ts;
-      // }
-
-      // function toggleReturnBox(btn) {
-      //   let box1 = _("return-box");
-      //   console.log(this.checked);
-      //   if (btn == "return") {
-      //     box1.style.opacity = 1;
-      //   }
-      //   if (btn == "one-way") {
-      //     box1.style.opacity = 0;
-      //   }
-      // }
-
-      // function whichCityBox(ft) {
-      //   fromTo = ft;
-      // }
-
-      // function positionCalender(box) {
-      //   let boxPos = _("search-form").getBoundingClientRect(),
-      //     leaveBoxPos = _("leave-date").getBoundingClientRect(),
-      //     returnBoxPos = _("return-date").getBoundingClientRect(),
-      //     leaveTopPos = leaveBoxPos.top - boxPos.top,
-      //     leaveLeftPos = leaveBoxPos.left - boxPos.left,
-      //     returnTopPos = returnBoxPos.top - boxPos.top,
-      //     returnLeftPos = returnBoxPos.left - boxPos.left;
-
-      //   if (box === "leave-date") {
-      //     cal.style.top = leaveTopPos + 32 + "px";
-      //     cal.style.left = leaveLeftPos + "px";
-      //   }
-      //   if (box === "return-date") {
-      //     cal.style.top = returnTopPos + 32 + "px";
-      //     cal.style.left = returnLeftPos + "px";
-      //   }
-      // }
-
-      // function showCalender() {
-      //   cal.style.opacity = 1;
-      //   cal.style.pointerEvents = "auto";
-      //   stayOpen = true;
-      //   pickedDate = this.id;
-      //   positionCalender(pickedDate);
-      // }
-
-      // function hideCalender() {
-      //   if (!stayOpen) {
-      //     cal.style.opacity = 0;
-      //     cal.style.pointerEvents = "none";
-      //   }
-      // }
-
-      // function getCellDate() {
-      //   var tds = document.querySelectorAll("tbody td"),
-      //     i;
-      //   for (i = 0; i < tds.length; i++) {
-      //     let btn = tds[i];
-      //     btn.addEventListener("click", fetchDate);
-      //   }
-      // }
-
-      // function fetchDate() {
-      //   let td = this.getAttribute("data-date");
-      //   if (pickedDate == "leave-date") {
-      //     _("leave-date").setAttribute("value", td);
-      //   }
-      //   if (pickedDate == "return-date") {
-      //     _("return-date").value = td;
-      //   }
-      //   stayOpen = false;
-      //   hideCalender();
-      // }
-
-      // function trackMonth(dir) {
-      //   if (dir == "prev") month -= 1;
-      //   if (dir == "next") month += 1;
-      //   if (month > 11) {
-      //     month = 0;
-      //     year += 1;
-      //   }
-      //   if (month < 0) {
-      //     month = 11;
-      //     year -= 1;
-      //   }
-      //   _("month").innerHTML = months[month];
-      //   _("year").innerHTML = year;
-      //   calender(month, year);
-      // }
-
-      // function calender(month, year) {
-      //   let today = dateObj.getDate();
-      //   let firstDay = new Date(year, month, 1);
-      //   let startDay = firstDay.getDay();
-      //   let weekDays = ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"];
-      //   var monthLength = new Date(year, month + 1, 0).getDate();
-      //   let html = "";
-      //   let dd;
-
-      //   // DAYS OF WEEK HEADER
-      //   html += "<tr>";
-      //   for (let i = 0; i < weekDays.length; i++) {
-      //     html += "<td>" + weekDays[i] + "</td>";
-      //   }
-      //   html += "</tr>";
-
-      //   // CALENDAR PART
-      //   var count = 0; // count of table's <td> cells
-      //   if (startDay !== 0) {
-      //     // Leave these cells blank
-      //     html += "<tr><td colspan='" + startDay + "'></td>";
-      //     count = startDay;
-      //   }
-      //   for (var day = 1; day <= monthLength; day++) {
-      //     if (count % 7 === 0) {
-      //       // new table row
-      //       html += "<tr>";
-      //     }
-
-      //     dd = addZero(year) + "-" + addZero(month + 1) + "-" + day;
-
-      //     if ((count < today && month == currMonth) || year < currYear) {
-      //       html += "<td class='closed' data-date=" + dd + ">" + day + "</td>";
-      //     } else {
-      //       html += "<td class='normal' data-date=" + dd + ">" + day + "</td>";
-      //     }
-
-      //     count++;
-      //     if (count % 7 === 0) {
-      //       html += "</tr>";
-      //     }
-      //   }
-      //   var blankCells = 7 - (count % 7);
-      //   if (blankCells < 7) {
-      //     html += "<td colspan='" + blankCells + "'></td></tr>";
-      //   }
-
-      //   table.innerHTML = html;
-
-      //   getCellDate();
-      // }
-
-      // calender(month, year);
-      // positionCalender("leave-date");
-  </script>
+  
 </body>
 
 </html>
-<!-- <style>
-  ul {
-    list-style: none;
-  }
-  .list {
-    width: 30%;
-    background-color: #ffffff;
-    border-radius: 0 0 5px 5px;
-  }
-  .list-items {
-    padding: 10px 5px;
-  }
-  .list-items:hover {
-    background-color: #dddddd;
-  }
-  /* form {
-    width: 75vmin;
-    position: absolute;
-    padding: 40px 0;
-  }
-  input[type="text"] {
-    width: 30%;
-    padding: 15px 10px;
-    border: none;
-    border-bottom: 1px solid #645979;
-    outline: none;
-    border-radius: 5px 5px 0 0;
-    background-color: #ffffff;
-    font-size: 16px;
-  } */
-</style> -->
