--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1,5 +1,5 @@
 {% extends 'layout2.html' %} {% block head %}
-<title>Payment | Flight</title>
+<title>Flight Payment</title>
 <link rel="stylesheet" href="/static/css/payment_style.css" />
 {% endblock %} {% block body %}
 <section class="section section1">
