--- a/templates/payment_process.html
+++ b/templates/payment_process.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %} {% block head %}
-<title>Payment Processing | Flight</title>
+<title>Payment Processing</title>
 <link rel="stylesheet" href="/static/css/payment_process_style.css" />
 <script type="text/javascript" src="/static/js/payment_process.js"></script>
 {% endblock %} {% block body %}
