--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,8 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>Travel Gateway - Login</title>
+    <link rel="icon" type="image/ico" href="../static/img/favicon.ico" />
+    <title>Login</title>
   </head>
 
   <body>
