--- a/templates/register.html
+++ b/templates/register.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="icon" type="image/ico" href="../static/img/favicon.ico" />
     <title>Travel Gateway - Register</title>
   </head>
 
