--- a/templates/flight.html
+++ b/templates/flight.html
@@ -1,30 +1,12 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title></title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="static/flight.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <link rel="icon" type="image/ico" href="../static/img/favicon.ico" />
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
-    <title>Ticket Search</title>
-  </head>
-  <body>
+
+{% extends 'layout.html' %}
+{% block head %}
+  <link rel="stylesheet" href="static/css/ticket_search.css" />
+  <link rel="icon" type="image/ico" href="../static/img/favicon.ico" />
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
+  <title>Ticket Search</title>
+{% endblock %}
+{% block body %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
         <div class="wrapper bg-white border rounded" id="form-container">
@@ -294,36 +276,5 @@
         }
       }
     </script>
-  </body>
-</html>
-<!-- <style>
-  ul {
-    list-style: none;
-  }
-  .list {
-    width: 30%;
-    background-color: #ffffff;
-    border-radius: 0 0 5px 5px;
-  }
-  .list-items {
-    padding: 10px 5px;
-  }
-  .list-items:hover {
-    background-color: #dddddd;
-  }
-  /* form {
-    width: 75vmin;
-    position: absolute;
-    padding: 40px 0;
-  }
-  input[type="text"] {
-    width: 30%;
-    padding: 15px 10px;
-    border: none;
-    border-bottom: 1px solid #645979;
-    outline: none;
-    border-radius: 5px 5px 0 0;
-    background-color: #ffffff;
-    font-size: 16px;
-  } */
-</style> -->
+{% endblock %}
+
