flight.html UI fix (#58)

--- a/templates/flight.html
+++ b/templates/flight.html
@@ -9,6 +9,7 @@
 {% block body %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+      <section class="section section1">
         <div class="wrapper bg-white border rounded" id="form-container">
       <div id="form-title-container">
         <h4>Book Flights With Ease</h4>
@@ -123,6 +124,8 @@
         </div>
       </div>
     </div>
+    </section>
+
 
 
 
