--- a/static/css/ticket_search.css
+++ b/static/css/ticket_search.css
@@ -14,7 +14,7 @@ table {
   th {
     height: 20px;
   }
-body {
+.section1 {
     /* background-color: rgb(20, 117, 220); */
     background-image: linear-gradient(135deg, rgb(20, 117, 220), #b8017b);
 }
@@ -165,7 +165,7 @@ input[type="date"] {
     margin: 2rem 0rem;
 }
 
-li:hover {
+li:not(.nav-item):hover {
     background-color: #2d77ed;
 }
 
