--- a/static/recommend.css
+++ b/static/recommend.css
@@ -1,8 +1,13 @@
-
-.slider {
-    width: 50%;
+* {
+  box-sizing: border-box;
 }
 
-body {
-    margin-left: 10%;
+.row {
+  display: flex;
+}
+
+/* Create three equal columns that sits next to each other */
+.column {
+  flex: 33.33%;
+  padding: 5px;
 }
