--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,6 @@
     />
     <link rel="stylesheet" href="https://use.typekit.net/cav5lva.css" />
     <link rel="stylesheet" href="../static/css/layout_style.css" />
-    <link rel="icon" type="image/ico" href="../static/img/favicon.ico" />
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -29,6 +28,7 @@
     ></script>
     <script type="text/javascript" src="../static/js/layout.js"></script>
     {% block head %} {% endblock %}
+    <link rel="icon" type = "image/x-icon" href = "../static/img/favicon.ico">
   </head>
   <body>
     {% block parentBody %} {% endblock %}
