--- a/templates/flight_base.html
+++ b/templates/flight_base.html
@@ -9,6 +9,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title></title>
+  <link rel="icon" type = "image/x-icon" href = "../static/img/favicon.ico">
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/static/css/ticket_search.css" />
