--- a/templates/register.html
+++ b/templates/register.html
@@ -14,6 +14,7 @@
     />
     <link rel="icon" type="image/ico" href="../static/img/favicon.ico" />
     <title>Travel Gateway - Register</title>
+    <link rel="icon" type = "image/x-icon" href = "../static/img/favicon.ico">
   </head>
 
   <body>
