--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %} {% block head %}
 <title>Search Flight</title>
+<link rel="icon" type = "image/x-icon" href = "../static/img/favicon.ico">
 <link rel="stylesheet" href="../static/css/search_style.css" />
 <link rel="stylesheet" href="../static/css/search2_style.css" />
 <script src="../static/js/search2.js"></script>
