--- a/templates/book.html
+++ b/templates/book.html
@@ -692,7 +692,7 @@
                   <option data-countryCode="UY" value="598">
                     Uruguay (+598)
                   </option>
-                  <option data-countryCode="US" value="1">USA (+1)</option>
+                  <option data-countryCode="US" value="1" selected>USA (+1)</option>
                   <option data-countryCode="UZ" value="7">
                     Uzbekistan (+7)
                   </option>
