disable browser autocomplete

--- a/templates/flight.html
+++ b/templates/flight.html
@@ -50,6 +50,7 @@
             class="form-control border-bottom"
             id="dep-from"
             name="Origin"
+            autocomplete="false"
           />
           <div class="label" id="from">
             <ul id="origin_list" class="list-group"></ul>
@@ -67,6 +68,7 @@
             class="form-control border-bottom"
             id="dep-to"
             name="Destination"
+            autocomplete="false"
           />
           <div class="label" id="to">
             <ul id="destination_list" class="list-group"></ul>
