validate username on input

--- a/templates/register.html
+++ b/templates/register.html
@@ -127,7 +127,7 @@
     document
       .getElementById("password2")
       .addEventListener("input", validateInput);
-    $("#username").on("focusout", validateUsername);
+    $("#username").on("input", validateUsername);
     // document
     //   .getElementById("username")
     //   .addEventListener("focusout", validateUsername);
