--- a/templates/bookings.html
+++ b/templates/bookings.html
@@ -82,7 +82,11 @@
             <!--<button class="btn btn-outline-primary btnp">Print Ticket</button>-->
             <form action="/flight/getticket" method="get" target="_blank">
               <input type="hidden" name="ref" value="{{ticket.ref_no}}" />
-              <button type="submit" class="btn btn-outline-info btnp pbtn">
+              <button
+                type="submit"
+                class="btn btn-outline-info btnp pbtn"
+                hidden
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
