fix modify search feature

--- a/templates/search.html
+++ b/templates/search.html
@@ -73,7 +73,7 @@
       </div>
       <div class="v-line"></div>
       <div class="trip-modify">
-        <form action="/" method="POST">
+        <form action="/flight" method="GET">
           <input type="hidden" name="Origin" value="{{origin.code.upper()}}" />
           <input
             type="hidden"
