--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -64,7 +64,7 @@
               <button
                 class="btn btn-outline-danger"
                 style="border-radius: 25rem"
-                onclick="window.location.href = '/login';"
+                onclick="window.location.href = '/';"
               >
                 <svg
                   width="1.1em"
